[project]
name = "spiritengine"
version = "0.1.0"
description = "Rock-solid primitives for content-addressable hashing, chain fingerprinting, and config diffing"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
diff = ["jsonpatch>=1.32"]
dev = [
    "pytest>=7.0",
    "jsonpatch>=1.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
