[project]
name = "knurl"
version = "0.1.0"
description = "Rock-solid primitives for content-addressable hashing, chain fingerprinting, and config diffing"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Patrick Smyth", email = "patricksmyth01@gmail.com"}
]
keywords = ["hashing", "fingerprinting", "merkle", "content-addressable", "json-patch", "diffing", "cryptography"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security :: Cryptography",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/spiritengine/knurl"
Repository = "https://github.com/spiritengine/knurl"
Issues = "https://github.com/spiritengine/knurl/issues"

[project.optional-dependencies]
diff = ["jsonpatch>=1.32"]
dev = [
    "pytest>=7.0",
    "jsonpatch>=1.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
